# dawon

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  justfile
.github/: copilot-instructions.md
.github/scripts/: validate_commit_messages.py
.github/workflows/: ci.yml  claude-review.yml  docs.yml  release.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_c06_compiler.rs  fuzz_config.rs  fuzz_forbidden.rs
src/: cli.rs  config.rs  error.rs  eval.rs  lib.rs  main.rs  report.rs
src/checks/: compiler.rs  forbidden.rs  harness.rs  mod.rs  norminette.rs  valgrind.rs
src/subjects/: c00.rs  c01.rs  c02.rs  c03.rs  c04.rs  c05.rs  c06.rs  c07.rs  c08.rs  c09.rs  mod.rs  rush00.rs
tests/: test_config.rs  test_eval.rs  test_forbidden.rs  test_harness.rs  test_subjects_c00.rs
tests/python/: conftest.py  pyproject.toml  test_checks.py  test_cli.py  test_commit_message_validation.py
tests/python/fixtures/compile_error/: compile_error.c
