[package]
name = "dawon"
version = "0.1.0"
edition = "2021"
# Dawon is the tiger (vahana) of Mahadurga — guardian, merciless.
description = "Dawon — super mini-moulinette, stricter than moulinette"
readme = "README.md"
license = "MIT"
repository = "https://github.com/qlrd/dawon"
homepage = "https://github.com/qlrd/dawon"

[[bin]]
name = "dawon"
path = "src/main.rs"

[lib]
name = "dawon"
path = "src/lib.rs"

[dependencies]
clap        = { version = "4", features = ["derive"] }
anyhow      = "1"
colored     = "2"
regex       = "1"
serde       = { version = "1", features = ["derive"] }
toml        = "0.8"
tempfile    = "3"
libloading  = "0.8"
sha2        = "0.10"
hex-literal = "0.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
